BaxH5Writer implements autoclosable